<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="22dp">

        <TextView
            style="@style/Widget.MHike.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced_search"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAdvName"
            style="@style/Widget.MHike.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:hint="@string/adv_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAdvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAdvLocation"
            style="@style/Widget.MHike.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/adv_location">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAdvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMinKm"
                style="@style/Widget.MHike.TextInput"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:hint="@string/adv_min_km">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtMinKm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMaxKm"
                style="@style/Widget.MHike.TextInput"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/adv_max_km">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtMaxKm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDateFrom"
                style="@style/Widget.MHike.TextInput"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:hint="@string/adv_date_from">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDateFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDateTo"
                style="@style/Widget.MHike.TextInput"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/adv_date_to">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDateTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="18dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnReset"
                style="@style/Widget.MHike.Button.Secondary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="@string/reset" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnApply"
                style="@style/Widget.MHike.Button.Primary"
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:text="@string/apply" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
